--- a/web1.html
+++ b/web1.html
@@ -37,10 +37,11 @@
 		<li><a href="web1.html">영화</a></li>
 	</ol>
 	<div id="ha">
-		<video width ="75%" controls>
+		<!--<video width ="75%" controls>
    			<source src="hhh.mp4" type="video/mp4" >
    			IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다.
-		</video>
+		</video>-->
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/KrCguRAaDNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 </div>
 
