--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div>
 		<img src="maxresdefaul.jpg"width ="300">
 		<br>
-		<audio src="changmo.mp3" autoplay controls="">
+		<audio src="changmo.mp3" autoplay controls="" type="audio/mp3" />
 			브라우저가 오디오를 지원하지 않습니다.
 		</audio>
 	</div>
