--- a/index.html
+++ b/index.html
@@ -1,37 +1,22 @@
 <!doctype html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="hello.css">
 <title>TeaTube</title>
 <meta charset="utf-8">
-<style>
-	#yo{
-		display: grid;
-		grid-template-columns: 150px 1fr;
-	}
-	#yee{
-		border-bottom: 5px red solid;
-	}
-	ul{
-		border-right: 5px red solid;
-		padding: 20px;
-		width: 50px;
-		padding-top: 0;
-		margin: 0;
-	}
-</style>
 </head>
 
 <body>
 <div id="yee">
-	<img src="2.jpg" width="3%" >
-	<a href="index.html"><img src="h.jpg" width="10%" ></a>
+	<img src="2.jpg" width="40px" >
+	<a href="index.html"><img src="h.jpg" width="100px" ></a>
 </div>
 <div id="yo">
 	<ul>
-		<li><a href="index.html">홈</a></li>
+		<li><a href="index.html" class="bye">홈</a></li>
 		<li>인기</li>
 		<li>구독</li>
-		<li><a href="web1.html">영화</a></li>
+		<li><a href="web1.html" class="bye">영화</a></li>
 	</ul>
 	<div>
 		<img src="maxresdefaul.jpg"width ="300">
