--- a/web1.html
+++ b/web1.html
@@ -2,47 +2,22 @@
 <html>
 <head>
 <title>TeaTube</title>
+<link rel="stylesheet" type="text/css" href="hello.css">
 <meta charset="utf-8">
-<style>
-	#yo{
-		display: grid;
-		grid-template-columns: 150px 1fr;
-	}
-	#yee{
-		border-bottom: 5px red solid;
-	}
-	#ha{
-		padding-top: 10px
-	}
-	ol{
-		border-right: 5px red solid;
-		padding: 20px;
-		width: 50px;
-		padding-top: 0;
-		margin: 0;
-	}
-</style>
 </head>
-
 <body>
 <div id="yee">
-	<img src="2.jpg" width="3%" >
-	<a href="index.html"><img src="h.jpg" width="10%" ></a>
+	<img src="2.jpg" width="40px" >
+	<a href="index.html"><img src="h.jpg" width="100px" ></a>
 </div>
 <div id="yo">
-	<ol>
-		<li><a href="index.html">홈</a></li>
+	<ul>
+		<li><a href="index.html" class="bye">홈</a></li>
 		<li>인기</li>
 		<li>구독</li>
-		<li><a href="web1.html">영화</a></li>
-	</ol>
-	<div id="ha">
-		<!--<video width ="75%" controls>
-   			<source src="hhh.mp4" type="video/mp4" >
-   			IE 8 이하는 비디오가 나오지 않습니다. IE 버전을 업데이트 하시길 바랍니다.
-		</video>-->
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/KrCguRAaDNY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</div>
+		<li><a href="web1.html" class="bye">영화</a></li>
+	</ul>
+	음악 정보
 </div>
 
 <p>
